# fMRI_Observables

./: LICENSE.txt  README.md  pyproject.toml  setup.py
fMRI_Obs/: FC.py  GBC.py  Integration.py  Metastability.py  OLD_Integration.py  PhaseInteractionMatrix.py  Segregation.py  filteredPowerSpectralDensity.py  intrinsicIgnition.py  multi_Measurements.py  phFCD.py  stimulatedIgnition.py  swFCD.py
src/: BOLDFilters.py  OLD_Integration.py  __init__.py  phFCD.py
src/fMRI_Obs/: BOLDFilters.py  FC.py  GBC.py  Integration.py  Metastability.py  OLD_Integration.py  PhaseInteractionMatrix.py  __init__.py  filteredPowerSpectralDensity.py  intrinsicIgnition.py  phFCD.py  swFCD.py
tests/: test.py
