[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fMRI_Observables"
version = "1.0.0"
authors = [
  { name="Gustavo Patow", email="gustavo.patow@udg.edu" },
]
description = "fMRI Obervable spackage"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dagush/fMRI_Observables"
"Bug Tracker" = "https://github.com/dagush/fMRI_Observables/issues"
